updated the deployment scripts

--- a/components/web/nginx.conf
+++ b/components/web/nginx.conf
@@ -7,9 +7,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location = /index.html {
-        expires -1;
-    }
+    # location = /index.html {
+    #     expires -1;
+    # }
 
     location /proxy/ {
         proxy_pass http://api-service.default.svc:5000;
