--- a/kubernetes/api-deployment.yaml
+++ b/kubernetes/api-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: api
-        image: kennedyuche/api:v1
+        image: kennedyuche/flask-api:v1.0.0
         ports:
         - containerPort: 5000
