--- a/kubernetes/web-deployment.yaml
+++ b/kubernetes/web-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: web
-        image: kennedyuche/web:v1
+        image: kennedyuche/vue-web:v1.0.0
         ports:
         - containerPort: 80
