--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,8 +21,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Check Makefile
-      run: make --version
+    - name: Check Skaffold
+      run: skaffold --version
 
   #   - name: Create and populate .env file for api application
   #     run: |
