--- a/kubernetes/web-deployment.yaml
+++ b/kubernetes/web-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web
+  name: vue-web
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: web
+      app: vue-web
   template:
     metadata:
       labels:
-        app: web
+        app: vue-web
     spec:
       containers:
-      - name: web
+      - name: vue-web
         image: kennedyuche/vue-web:v1.0.0
         ports:
         - containerPort: 80
