--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -33,49 +33,52 @@ jobs:
         else
           echo "::set-output name=ENV::${{ steps.branch_name.outputs.branch }}"
         fi
-        echo "The environment is $ENV"
+        echo "The environment is ${{ steps.project-env.outputs.ENV }}"
 
     - name: Get short SHA
       id: commit-sha
-      run: echo "::set-output name=SHA::$(echo ${GITHUB_SHA} | cut -c1-7)"
+      run: |
+        echo "::set-output name=SHA::$(echo ${GITHUB_SHA} | cut -c1-7)"
+        echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
 
-  build-and-push-containers:
-    runs-on: ubuntu-20.04
-    needs: set_environment
-    env:
-      ENV: ${{ needs.set_environment.outputs.ENV }}
-      IMG_TAG: ${{ needs.set_environment.outputs.SHA }}
+
+  # build-and-push-containers:
+  #   runs-on: ubuntu-20.04
+  #   needs: set_environment
+  #   env:
+  #     ENV: ${{ needs.set_environment.outputs.ENV }}
+  #     IMG_TAG: ${{ needs.set_environment.outputs.SHA }}
       
-    steps:
-    - name: Checkout GitHub Action
-      uses: actions/checkout@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+  #   steps:
+  #   - name: Checkout GitHub Action
+  #     uses: actions/checkout@v3
+  #     with:
+  #       token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create .env for the Flask App
-      run: |
-        echo 'Creating Flask App .env file for ${{ env.ENV }} environment'
-        pushd "components/api"; echo ZONE_ID=${{ secrets.ZONE_ID }} > .env; popd;
-        pushd "components/api"; echo CF_API_KEY=${{ secrets.CF_API_KEY }} >> .env; popd;
-        pushd "components/api"; echo CF_API_EMAIL=${{ secrets.CF_API_EMAIL }} >> .env; popd;
+  #   - name: Create .env for the Flask App
+  #     run: |
+  #       echo 'Creating Flask App .env file for ${{ env.ENV }} environment'
+  #       pushd "components/api"; echo ZONE_ID=${{ secrets.ZONE_ID }} > .env; popd;
+  #       pushd "components/api"; echo CF_API_KEY=${{ secrets.CF_API_KEY }} >> .env; popd;
+  #       pushd "components/api"; echo CF_API_EMAIL=${{ secrets.CF_API_EMAIL }} >> .env; popd;
         
-    - name: Create .env file for Vue Web App
-      run: |
-        echo 'Creating Vue Web App .env file for ${{ env.ENV }} environment'
-        pushd "components/web"; echo VUE_APP_PROXY_URL=http://127.0.0.1:5000/ > .env; popd;
+  #   - name: Create .env file for Vue Web App
+  #     run: |
+  #       echo 'Creating Vue Web App .env file for ${{ env.ENV }} environment'
+  #       pushd "components/web"; echo VUE_APP_PROXY_URL=http://127.0.0.1:5000/ > .env; popd;
 
-    - name: Install Skaffold for App Builds
-      run: |
-        curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64 && \
-        sudo install skaffold /usr/local/bin/
+  #   - name: Install Skaffold for App Builds
+  #     run: |
+  #       curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64 && \
+  #       sudo install skaffold /usr/local/bin/
 
-    - name: Authenticate to Docker Registry
-      run: |
-        make docker-login DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}
+  #   - name: Authenticate to Docker Registry
+  #     run: |
+  #       make docker-login DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build the Project Container Images
-      run: |
-        make skaffold-build DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} TAG=${{ env.IMG_TAG }} ENV=${{ env.ENV }}
+  #   - name: Build the Project Container Images
+  #     run: |
+  #       make skaffold-build DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} TAG=${{ env.IMG_TAG }} ENV=${{ env.ENV }}
 
   # build-infrastructure:
   #   needs: build-and-push-containers
