--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,26 +21,28 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set Branch Name
-      id: branch_name
-      run: echo "::set-output name=branch::$(echo $GITHUB_REF | awk -F'/' '{print $3}')"
-
-    - name: Set the Environment Name
+    - name: Set Project Environment
       id: project-env
       run: |
-        if [ "${{ steps.branch_name.outputs.branch }}" == "main" ]; then
-          echo "ENV=prod" >> $GITHUB_OUTPUT
+        if [ "${{ github.ref }}" = "refs/heads/main" ]; then
+          echo "::set-output name=env_name::prod"
+        elif [ "${{ github.ref }}" = "refs/heads/dev" ]; then
+          echo "::set-output name=env_name::dev"
+        elif [ "${{ github.ref }}" = "refs/heads/stg" ]; then
+          echo "::set-output name=env_name::stg"
         else
-          echo "ENV=${{ steps.branch_name.outputs.branch }}" >> $GITHUB_OUTPUT
+          echo "::set-output name=env_name::dev"
         fi
-        echo "The environment is ${{ steps.project-env.outputs.ENV }}"
 
-    - name: Get short SHA
-      id: commit-sha
-      run: |
-        echo "::set-output name=SHA::$(echo ${GITHUB_SHA} | cut -c1-7)"
-        echo "SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
-        echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
+    - name: Check Branch Name
+      run: echo "I'm using variable ${{ steps.project-env.outputs.env_name }}"
+
+    # - name: Get short SHA
+    #   id: commit-sha
+    #   run: |
+    #     echo "::set-output name=SHA::$(echo ${GITHUB_SHA} | cut -c1-7)"
+    #     echo "SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
+    #     echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
 
 
   # build-and-push-containers:
