--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,13 +25,13 @@ jobs:
       id: project-env
       run: |
         if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-          echo "env_name=prod >> $GITHUB_OUTPUT"
+          echo "env_name=prod\n" >> $GITHUB_OUTPUT
         elif [ "${{ github.ref }}" = "refs/heads/dev" ]; then
-          echo "env_name=dev>> $GITHUB_OUTPUT"
+          echo "env_name=dev\n" >> $GITHUB_OUTPUT
         elif [ "${{ github.ref }}" = "refs/heads/stg" ]; then
-          echo "env_name=stg >> $GITHUB_OUTPUT"
+          echo "env_name=stg\n" >> $GITHUB_OUTPUT
         else
-          echo "env_name=dev>> $GITHUB_OUTPUT"
+          echo "env_name=dev\n" >> $GITHUB_OUTPUT
         fi
 
     - name: Check Branch Name
