--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,25 +25,25 @@ jobs:
       id: project-env
       run: |
         if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-          echo "env_name=prod\n" >> $GITHUB_OUTPUT
+          echo "env_name=prod" >> $GITHUB_OUTPUT
         elif [ "${{ github.ref }}" = "refs/heads/dev" ]; then
-          echo "env_name=dev\n" >> $GITHUB_OUTPUT
+          echo "env_name=dev" >> $GITHUB_OUTPUT
         elif [ "${{ github.ref }}" = "refs/heads/stg" ]; then
-          echo "env_name=stg\n" >> $GITHUB_OUTPUT
+          echo "env_name=stg" >> $GITHUB_OUTPUT
         else
-          echo "env_name=dev\n" >> $GITHUB_OUTPUT
+          echo "env_name=dev" >> $GITHUB_OUTPUT
         fi
 
     - name: Check Branch Name
       run: echo "I'm using variable ${{ steps.project-env.outputs.env_name }}"
 
-    # - name: Get short SHA
-    #   id: commit-sha
-    #   run: |
-    #     echo "::set-output name=SHA::$(echo ${GITHUB_SHA} | cut -c1-7)"
-    #     echo "SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
-    #     echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
-
+    - name: Get short SHA
+      id: commit-sha
+      run: |
+        echo "SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
+        
+    - name: Check Github SHA
+      run: echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
 
   # build-and-push-containers:
   #   runs-on: ubuntu-20.04
