--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -41,13 +41,16 @@ jobs:
       id: commit-sha
       run: |
         echo "SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
+        
+    - name: Check Github SHA
+      run: echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
 
   build-and-push-containers:
     runs-on: ubuntu-20.04
     needs: [set-environment]
     env:
-      ENV: ${{ steps.set-environment.outputs.env_name }}
-      IMG_TAG: ${{ steps.commit-sha.outputs.SHA }}
+      ENV: ${{ needs.set-environment.steps.project-env.outputs.ENV }}
+      IMG_TAG: ${{ needs.set-environment.steps.commit-sha.outputs.SHA }}
       
     steps:
     - name: Checkout GitHub Action
@@ -56,10 +59,10 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check Github SHA
-      run: echo "The Github SHA is ${{ env.IMG_TAG }}"
+      run: echo "The Github SHA is ${{ needs.set-environment.outputs.SHA }}"
 
     - name: Check ENV
-      run: echo "The ENV is ${{ env.ENV }}"
+      run: echo "The ENV is ${{ needs.set-environment.outputs.ENV }}"
 
     # - name: Create .env for the Flask App
     #   run: |
