--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,6 +15,9 @@ env:
 jobs:
   set-environment:
     runs-on: ubuntu-latest
+    outputs:
+      env_name: ${{ steps.project-env.outputs.env_name }}
+      sha: ${{ steps.commit-sha.outputs.sha }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -40,17 +43,17 @@ jobs:
     - name: Get Short Github Commit SHA
       id: commit-sha
       run: |
-        echo "SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
+        echo "sha=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
         
     - name: Check Github SHA
-      run: echo "The Github SHA is ${{ steps.commit-sha.outputs.SHA }}"
+      run: echo "The Github SHA is ${{ steps.commit-sha.outputs.sha }}"
 
   build-and-push-containers:
     runs-on: ubuntu-20.04
     needs: [set-environment]
     env:
-      ENV: ${{ needs.set-environment.project-env.outputs.ENV }}
-      IMG_TAG: ${{ needs.set-environment.commit-sha.outputs.SHA }}
+      ENV: ${{ needs.set-environment.outputs.env_name }}
+      IMG_TAG: ${{ needs.set-environment.outputs.sha }}
       
     steps:
     - name: Checkout GitHub Action
@@ -59,10 +62,10 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check Github SHA
-      run: echo "The Github SHA is ${{ needs.set-environment.outputs.SHA }}"
+      run: echo "The Github SHA is ${{ env.IMG_TAG }}"
 
     - name: Check ENV
-      run: echo "The ENV is ${{ needs.set-environment.outputs.ENV }}"
+      run: echo "The ENV is ${{ env.ENV }}"
 
     # - name: Create .env for the Flask App
     #   run: |
