--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -61,36 +61,30 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Check Github SHA
-      run: echo "The Github SHA is ${{ env.IMG_TAG }}"
-
-    - name: Check ENV
-      run: echo "The ENV is ${{ env.ENV }}"
-
-    # - name: Create .env for the Flask App
-    #   run: |
-    #     echo 'Creating Flask App .env file for ${{ env.ENV }} environment'
-    #     pushd "components/api"; echo ZONE_ID=${{ secrets.ZONE_ID }} > .env; popd;
-    #     pushd "components/api"; echo CF_API_KEY=${{ secrets.CF_API_KEY }} >> .env; popd;
-    #     pushd "components/api"; echo CF_API_EMAIL=${{ secrets.CF_API_EMAIL }} >> .env; popd;
+    - name: Create .env for the Flask App
+      run: |
+        echo 'Creating Flask App .env file for ${{ env.ENV }} environment'
+        pushd "components/api"; echo ZONE_ID=${{ secrets.ZONE_ID }} > .env; popd;
+        pushd "components/api"; echo CF_API_KEY=${{ secrets.CF_API_KEY }} >> .env; popd;
+        pushd "components/api"; echo CF_API_EMAIL=${{ secrets.CF_API_EMAIL }} >> .env; popd;
         
-    # - name: Create .env file for Vue Web App
-    #   run: |
-    #     echo 'Creating Vue Web App .env file for ${{ env.ENV }} environment'
-    #     pushd "components/web"; echo VUE_APP_PROXY_URL=http://127.0.0.1:5000/ > .env; popd;
+    - name: Create .env file for Vue Web App
+      run: |
+        echo 'Creating Vue Web App .env file for ${{ env.ENV }} environment'
+        pushd "components/web"; echo VUE_APP_PROXY_URL=http://127.0.0.1:5000/ > .env; popd;
 
-    # - name: Install Skaffold for App Builds
-    #   run: |
-    #     curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64 && \
-    #     sudo install skaffold /usr/local/bin/
+    - name: Install Skaffold for App Builds
+      run: |
+        curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64 && \
+        sudo install skaffold /usr/local/bin/
 
-    # - name: Authenticate to Docker Registry
-    #   run: |
-    #     make docker-login DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}
+    - name: Authenticate to Docker Registry
+      run: |
+        make docker-login DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: Build the Project Container Images
-    #   run: |
-    #     make skaffold-build DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} TAG=${{ env.IMG_TAG }} ENV=${{ env.ENV }}
+    - name: Build the Project Container Images
+      run: |
+        make skaffold-build DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} TAG=${{ env.IMG_TAG }} ENV=${{ env.ENV }}
 
   # build-infrastructure:
   #   needs: build-and-push-containers
