--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,7 +13,7 @@ env:
   WEB_DEPLOYMENT: vue-web
 
 jobs:
-  setup-environment:
+  setup-project-environment:
     runs-on: ubuntu-latest
     outputs:
       env_name: ${{ steps.project-env.outputs.env_name }}
@@ -33,27 +33,19 @@ jobs:
           echo "env_name=dev" >> $GITHUB_OUTPUT
         elif [ "${{ github.ref }}" = "refs/heads/stg" ]; then
           echo "env_name=stg" >> $GITHUB_OUTPUT
-        else
-          echo "env_name=dev" >> $GITHUB_OUTPUT
         fi
-
-    - name: Check Branch Name
-      run: echo "I'm using variable ${{ steps.project-env.outputs.env_name }}"
 
     - name: Get Short Github Commit SHA
       id: commit-sha
       run: |
         echo "sha=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
-        
-    - name: Check Github SHA
-      run: echo "The Github SHA is ${{ steps.commit-sha.outputs.sha }}"
 
   build-and-push-containers:
     runs-on: ubuntu-20.04
-    needs: [setup-environment]
+    needs: [setup-project-environment]
     env:
-      ENV: ${{ needs.setup-environment.outputs.env_name }}
-      IMG_TAG: ${{ needs.setup-environment.outputs.sha }}
+      ENV: ${{ needs.setup-project-environment.outputs.env_name }}
+      IMG_TAG: ${{ needs.setup-project-environment.outputs.sha }}
       
     steps:
     - name: Checkout GitHub Action
@@ -64,16 +56,16 @@ jobs:
     - name: Create .env for the Flask App
       run: |
         echo 'Creating Flask App .env file for ${{ env.ENV }} environment'
-        pushd "components/api"; echo ZONE_ID=${{ secrets.ZONE_ID }} > .env; popd;
-        pushd "components/api"; echo CF_API_KEY=${{ secrets.CF_API_KEY }} >> .env; popd;
-        pushd "components/api"; echo CF_API_EMAIL=${{ secrets.CF_API_EMAIL }} >> .env; popd;
+        pushd "components/api"; echo ZONE_ID=${{ secrets.ZONE_ID }} > .env; popd
+        pushd "components/api"; echo CF_API_KEY=${{ secrets.CF_API_KEY }} >> .env; popd
+        pushd "components/api"; echo CF_API_EMAIL=${{ secrets.CF_API_EMAIL }} >> .env; popd
         
     - name: Create .env file for Vue Web App
       run: |
         echo 'Creating Vue Web App .env file for ${{ env.ENV }} environment'
-        pushd "components/web"; echo VUE_APP_PROXY_URL=http://127.0.0.1:5000/ > .env; popd;
+        pushd "components/web"; echo VUE_APP_PROXY_URL=http://127.0.0.1:5000/ > .env; popd
 
-    - name: Install Skaffold for App Builds
+    - name: Install Skaffold for Project Builds
       run: |
         curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64 && \
         sudo install skaffold /usr/local/bin/
@@ -86,65 +78,74 @@ jobs:
       run: |
         make skaffold-build DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} TAG=${{ env.IMG_TAG }} ENV=${{ env.ENV }}
 
-  # build-infrastructure:
-  #   needs: build-and-push-containers
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #   - name: Checkout GitHub Action
-  #     uses: actions/checkout@v3
-  #     with:
-  #       token: ${{ secrets.GITHUB_TOKEN }}
+  build-project-infrastructure:
+    runs-on: ubuntu-20.04
+    needs: [setup-project-environment]
+    env:
+      ENV: ${{ needs.setup-project-environment.outputs.env_name }}
+    steps:
+    - name: Checkout GitHub Action
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-  #   - name: Initialize Terraform Modules
-  #     run: pushd "terraform"; terraform init; popd;
+    - name: Configure AWS CLI
+      run: |
+        aws configure set aws_access_key_id ${{secrets.AWS_ACCESS_KEY }} --profile default
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_KEY }} --profile default
+        aws configure set default.region ${{ secrets.AWS_REGION }} --profile default
+        aws configure set default.output csv --profile default
 
-  #   - name: Configure AWS CLI
-  #     run: |
-  #       aws configure set aws_access_key_id ${{secrets.AWS_ACCESS_KEY }} --profile default
-  #       aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_KEY }} --profile default
-  #       aws configure set default.region ${{ secrets.AWS_REGION }} --profile default
-  #       aws configure set default.output csv --profile default
+    - name: Initialize Terraform Modules
+      run: pushd "terraform/${{ env.ENV }}"; terraform init; popd
 
-  #   - name: Provision EKS with Terraform apply
-  #     run: |
-  #       terraform apply -auto-approve -var-file="vars.tfvars" -var="user_access_key=${{ secrets.AWS_ACCESS_KEY }}" \
-  #                                     -var="user_secret_key=${{ secrets.AWS_SECRET_KEY }}" -var="aws_region=${{ secrets.AWS_REGION }}" \
-  #                                     -var="env=${{ env.ENV }} -var="project_name=${{ env.PROJECT_NAME }}"
+    - name: Provision EKS with Terraform apply
+      run: |
+        pushd "terraform/${{ env.ENV }}"; \
+        terraform apply -auto-approve -var-file="vars.tfvars" -var="user_access_key=${{ secrets.AWS_ACCESS_KEY }}" \
+                                      -var="user_secret_key=${{ secrets.AWS_SECRET_KEY }}" -var="aws_region=${{ secrets.AWS_REGION }}" \
+                                      -var="env=${{ env.ENV }} -var="project_name=${{ env.PROJECT_NAME }}"; popd
 
-  # deploy-application:
-  #   needs: build-infrastructure
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #   - name: Checkout GitHub Action
-  #     uses: actions/checkout@v3
-  #     with:
-  #       token: ${{ secrets.GITHUB_TOKEN }}
+  deploy-project-applications:
+    runs-on: ubuntu-20.04
+    needs: [setup-project-environment]
+    env:
+      ENV: ${{ needs.setup-project-environment.outputs.env_name }}
+      IMG_TAG: ${{ needs.setup-project-environment.outputs.sha }}
+    steps:
+    - name: Checkout GitHub Action
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-  #   - name: Configure AWS CLI
-  #     run: |
-  #       aws configure set aws_access_key_id ${{secrets.AWS_ACCESS_KEY }} --profile default
-  #       aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_KEY }} --profile default
-  #       aws configure set default.region ${{ secrets.AWS_REGION }} --profile default
-  #       aws configure set default.output csv --profile default
+    - name: Configure AWS CLI
+      run: |
+        aws configure set aws_access_key_id ${{secrets.AWS_ACCESS_KEY }} --profile default
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_KEY }} --profile default
+        aws configure set default.region ${{ secrets.AWS_REGION }} --profile default
+        aws configure set default.output csv --profile default
 
-  #   - name: Authenticate to AWS EKS
-  #     run: aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ env.PROJECT_NAME }}-${{ env.ENV }}
+    - name: Authenticate to AWS EKS
+      run: aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ env.PROJECT_NAME }}-${{ env.ENV }}
 
-  #   - name: Install yq for updating the deployment manifests
-  #     run: |
-  #       sudo apt-get update
-  #       sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-  #       sudo chmod a+x /usr/local/bin/
+    - name: Fetch EKS Nodes
+      run: kubectl get nodes
 
-  #   - name: Update kubernetes deployment manifest
-  #     run: |
-  #       yq e -i '.spec.template.spec.containers[0].image = "${{ secrets.DOCKER_USERNAME }}/flask-api:${{ env.ENV }}-${{ env.IMG_TAG }}"' kubernetes/api-deployment.yaml
-  #       yq e -i '.spec.template.spec.containers[0].image = "${{ secrets.DOCKER_USERNAME }}/vue-web:${{ env.ENV }}-${{ env.IMG_TAG }}"' kubernetes/web-deployment.yaml
+    - name: Install yq for updating the deployment manifests
+      run: |
+        sudo apt-get update
+        sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+        sudo chmod a+x /usr/local/bin/
 
-  #   - name: Deploy application to EKS
-  #     run: make deploy-apps
+    - name: Update kubernetes deployment manifest
+      run: |
+        yq e -i '.spec.template.spec.containers[0].image = "${{ secrets.DOCKER_USERNAME }}/flask-api:${{ env.ENV }}-${{ env.IMG_TAG }}"' kubernetes/api-deployment.yaml
+        yq e -i '.spec.template.spec.containers[0].image = "${{ secrets.DOCKER_USERNAME }}/vue-web:${{ env.ENV }}-${{ env.IMG_TAG }}"' kubernetes/web-deployment.yaml
 
-  #   - name: View Application Rollout Status
-  #     run: |
-  #       kubectl rollout status deployment/${{ env.API_DEPLOYMENT }}
-  #       kubectl rollout status deployment/${{ env.WEB_DEPLOYMENT }}
+    - name: Deploy Application to EKS
+      run: make deploy-apps
+
+    - name: View Application Rollout Status
+      run: |
+        kubectl rollout status deployment/${{ env.API_DEPLOYMENT }}
+        kubectl rollout status deployment/${{ env.WEB_DEPLOYMENT }}
