--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -104,7 +104,7 @@ jobs:
         cd terraform/${{ env.ENV }}
         terraform apply -auto-approve -var-file="vars.tfvars" -var="user_access_key=${{ secrets.AWS_ACCESS_KEY }}" \
                                       -var="user_secret_key=${{ secrets.AWS_SECRET_KEY }}" -var="aws_region=${{ secrets.AWS_REGION }}" \
-                                      -var="env=${{ env.ENV }} -var="project_name=${{ env.PROJECT_NAME }}"
+                                      -var="env=${{ env.ENV }}" -var="project_name=${{ env.PROJECT_NAME }}"
 
   deploy-project-applications:
     runs-on: ubuntu-20.04
