--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,9 +3,7 @@ name: Vue Application Workflow
 on:
   push:
     branches:
-      - dev
-      - stg
-      - main
+      - branch
 
 env: 
   PROJECT_NAME: devops-challenge
@@ -149,6 +147,12 @@ jobs:
   #     run: |
   #       kubectl rollout status deployment/${{ env.API_DEPLOYMENT }}
   #       kubectl rollout status deployment/${{ env.WEB_DEPLOYMENT }}
+
+  #   - name: Setup Monitoring in the Cluster
+  #     run: |
+  #       make setup-monitoring
+
+
 
   cleanup-project-infrastructure:
     runs-on: ubuntu-20.04
