--- a/components/api/pyproject.toml
+++ b/components/api/pyproject.toml
@@ -13,6 +13,7 @@ Flask  = "3.0.0"
 flask-cors = "4.0.0"
 requests = "2.31.0"
 load_dotenv = "0.1.0"
+prometheus-client = "0.17.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
